RESOLVED FIXED269825
REGRESSION(274325@main): Find matches can not be selected after calling `findMatchesForString`
https://bugs.webkit.org/show_bug.cgi?id=269825
Summary REGRESSION(274325@main): Find matches can not be selected after calling `find...
Ahmad Saleem
Reported 2024-02-20 18:40:44 PST
Hi Team, I am noticing following issue in Minibrowser and at least - I think it is recent regression: 1) Open 'Minibrowser' 2) Go to any website or page: e.g., https://github.com/WebKit/WebKit/pulls?q=is%3Apr+is%3Aopen+sort%3Aupdated-desc+author%3AAhmad-S792 3) Search for keyword via Command+F - which has more than one instances (e.g., 'Remove') 4) Now with focus already in 'Find' - Press 'Enter' Expected Result (in Safari): Move to next instance of search result and move page as needed to find the search result Actual Result (in Minibrowser): Search remain stuck Just wanted to raise it. Thanks!
Attachments
Simon Fraser (smfr)
Comment 1 2024-02-21 13:49:47 PST
Yes please
Charlie Wolfe
Comment 2 2024-02-22 13:16:08 PST
Seems likely I broke this. I'll take a look.
Radar WebKit Bug Importer
Comment 3 2024-02-22 13:16:46 PST
Charlie Wolfe
Comment 4 2024-02-22 15:43:03 PST
EWS
Comment 5 2024-02-22 21:35:01 PST
Committed 275219@main (467125332e14): <https://commits.webkit.org/275219@main> Reviewed commits have been landed. Closing PR #24982 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.