Cherry-pick 467125332e14. rdar://123465751

REGRESSION(274325@main): Find matches can not be selected after calling `findMatchesForString`
    https://bugs.webkit.org/show_bug.cgi?id=269825
    rdar://123465751

    Reviewed by Aditya Keerthi.

    Before 274325@main, `FindController::updateFindUIAfterPageScroll` would clear `m_findMatches` only if it
    was called from `FindController::findString`. After 274325@main, all call sites will clear it, so a
    client will not be able to set selection after calling `findMatchesForString`. To match the previous
    behavior we can check if a frame identifier was passed, since that will only be provided by
    `FindController::findString`.

    * Source/WebKit/WebProcess/WebPage/FindController.cpp:
    (WebKit::FindController::updateFindUIAfterPageScroll):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/FindInPage.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/275219@main

Canonical link: https://commits.webkit.org/274941.40@safari-7619.1.5-branch